<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mAbout"
        android:title="@string/menu_about"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/mContact"
        android:title="@string/menu_contact"
        android:orderInCategory="101"/>

    <item
        android:id="@+id/mAccount"
        android:title="@string/menu_account"
        android:orderInCategory="102"/>

    <item
        android:id="@+id/mNotificacion"
        android:title="@string/menu_recibir_notificacion"
        android:orderInCategory="103"/>

    <item
        android:id="@+id/mStar"
        android:title="Refresh"
        android:orderInCategory="103"
        app:showAsAction="always"
        android:icon="@drawable/iconsstar" />

</menu>